# curso-rust-backend

./: .env  Dockerfile  README.md
.github/workflows/: main.yml
blog-platzi/: .env  Cargo.toml  Dockerfile
blog-platzi/.github/workflows/: main.yml
blog-platzi/migrations/2022-03-30-195332_create_posts/: down.sql
blog-platzi/src/: main.rs  models.rs
blog-platzi/templates/: index.html  posts.html
migrations/2022-03-30-195332_create_posts/: up.sql
src/: main.rs  models.rs  schema.rs
templates/: index.html
